--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,19 @@
       "name": "Novalis",
       "email": "contact@tnovalis.com",
       "homepage": "https://tnovalis.com",
+      "role": "Original Creator"
+    },
+        {
+      "name": "Wojciech",
+      "email": "wzieciak@itplanet.pl",
+      "homepage": "https://xyundy.pl",
       "role": "Developer"
     }
   ],
   "require": {
     "php": "^7.0",
     "cloudflare/sdk": "^1.0",
-    "illuminate/contracts": "^5.0"
+    "illuminate/contracts": "^5.0|^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.1"
