--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require": {
     "php": "^7.0",
     "cloudflare/sdk": "^1.0",
-    "illuminate/contracts": "^5.0|^6.0"
+    "illuminate/contracts": "5.6.*|5.7.*|5.8.*|^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.1"
